[gd_scene load_steps=3 format=3 uid="uid://64ihksy30e4w"]

[ext_resource type="Theme" uid="uid://m6f2pnni01p5" path="res://resources/ui/theme.tres" id="1_g2tk6"]
[ext_resource type="Script" path="res://scripts/ui/menu_settings.gd" id="2_rq30w"]

[node name="MenuSettings" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 1400.0
theme = ExtResource("1_g2tk6")
script = ExtResource("2_rq30w")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 140.0
offset_right = -100.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -305.5
offset_right = 305.5
offset_bottom = 70.0
grow_horizontal = 2
bbcode_enabled = true
text = "[font_size=48][fill][b]THE SETTINGS[/b][/fill][/font_size]"
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -332.0
offset_top = 170.0
offset_right = 332.0
offset_bottom = 508.0
grow_horizontal = 2

[node name="MouseSensitivity" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Control/VBoxContainer/MouseSensitivity"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Mouse Sensitivity"

[node name="MouseSensitivitySlider" type="HSlider" parent="Control/VBoxContainer/MouseSensitivity"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 10.0
value = 3.0
rounded = true

[node name="ControllerSensitivity" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Control/VBoxContainer/ControllerSensitivity"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Controller Sensitivity"

[node name="ControllerSensitivitySlider" type="HSlider" parent="Control/VBoxContainer/ControllerSensitivity"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 10.0
value = 3.0
rounded = true

[node name="InvertCameraX" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Control/VBoxContainer/InvertCameraX"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Invert Camera X"

[node name="InvertCameraXCheck" type="CheckButton" parent="Control/VBoxContainer/InvertCameraX"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="InvertCameraY" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Control/VBoxContainer/InvertCameraY"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Invert Camera Y"

[node name="InvertCameraYCheck" type="CheckButton" parent="Control/VBoxContainer/InvertCameraY"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
size_flags_horizontal = 10

[connection signal="value_changed" from="Control/VBoxContainer/MouseSensitivity/MouseSensitivitySlider" to="." method="_on_mouse_sensitivity_slider_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/ControllerSensitivity/ControllerSensitivitySlider" to="." method="_on_controller_sensitivity_slider_value_changed"]
[connection signal="toggled" from="Control/VBoxContainer/InvertCameraX/InvertCameraXCheck" to="." method="_on_invert_camera_x_check_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/InvertCameraY/InvertCameraYCheck" to="." method="_on_invert_camera_y_check_toggled"]
